============================
bzr-fastimport Release Notes
============================

.. contents::

0.14 UNRELEASED

Bug fixes
---------

* Print sane error when a fastimport file is incomplete.
  (Jelmer Vernooij, #937972)

0.13 2012-02-29

Changes
-------

* bzr-fastimport no longer ships exporters for various other version
  control systems. The versions of these exporters shipped with bzr-fastimport
  have been outdated for some time. Better and more recent exporters
  are widely available.

Compatibility
-------------

* Avoid using Tree.inventory directly, which is deprecated in bzr 2.6.
  (Jelmer Vernooij)

* Reimport some modules removed from python-fastimport 0.9.2.
  (Jelmer Vernooij, #693507)

Improvements
------------

* Document the SOURCE argument for ``bzr fast-export``. (Jelmer Vernooij, #672926)

0.12 2012-02-09

Bug fixes
---------

* Cope with non-utf8 characters in paths when importing.
  (Jelmer Vernooij, #838980)

Features
--------

* New option --rewrite-tag-names for 'bzr fast-export'. (Alex Usov, #872601)

* New option --dont-squash-empty-commits for 'bzr fast-import-filter'.
  (Alex Usov, #877303)

* Add --baseline option to ``bzr export``. (Andy Grimm, #893382)

0.11 2011-08-22

Bug fixes
---------

* Fix internal error in 'bzr fast-import-info'. (Jelmer Vernooij, #730833)

* Setup.py no longer relies on bzrlib. (Jelmer Vernooij, #735201)

* Avoid Inventory.copy, which has disappeared in newer versions of Bazaar.
  (Jelmer Vernooij, #485788)

* Allow "bzr fast-import-filter" to be used without first argument.
  (Jelmer Vernooij, #792935)

* Remove --branches-path and --tags-path options from ``bzr fast-export-from-svn``.
  These options are not supported by the underlying svn-fast-export.py yet.
  (Jelmer Vernooij, #513747)

* In "plain" mode, skip tags that contain characters not valid in Git.
  (Jelmer Vernooij, #386986)

* Support exporting files that are changed into directories.
  (Henrik Nyberg, #631979)

0.10 08-Mar-2011
